index size update

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         <a class="footer-link" href="https://www.linkedin.com/in/parthasarathibiswas/">LinkedIn</a>
         <a class="footer-link" href="https://twitter.com/p_s_biswas">Twitter</a>
         <a class="footer-link" href="https://drive.google.com/file/d/149_MlpXqYCcpazzQGvfBTyx-GXSsxPel/view?usp=share_link">Resume</a>
-        <p>© Partha Sarathi Biswas.</p>
+        <p class="copyright">© Partha Sarathi Biswas.</p>
       </div>
       
 </body>
